design footer  page and chnage seo meta tag

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -15,11 +15,11 @@
         background-color: #070D25;
     }
 
-    .cbg_goldden {
+    .cbg_golden {
         background-color: #D4AF37;
     }
 
-    .goldden {
+    .golden {
         color: #D4AF37;
     }
 
