redesign card product

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -24,6 +24,14 @@
         color: #D4AF37;
     }
 
+    .tgju-widget-item{
+        width: 300px;
+    }
+
+    .tgju-widget-item:hover {
+        cursor: pointer;
+     }
+
     .tgju-copyright,
     .tgju-copyright a {
         color: transparent !important;
